--- a/main.css
+++ b/main.css
@@ -11,28 +11,28 @@ div {
 }
 
 #red { /* this selects any elements with the red id */
-  color: #f00;
+  color: #ff1a1a;
 }
 
 #orange{
-  color: #ffa500;
+  color: #ff8533;
 }
 
 #yellow{
-  color: #ff0;
+  color: #ffff33;
 }
 
 #green{
-  color: #00bc3f;
+  color: #99ff66;
 }
 
 #blue{
-  color: #06f;
+  color: #4d79ff;
 }
 
 #indigo{
-  color: #8a2be2;
+  color: #5c5cd6;
 }
 #violet{
-  color: #d300c9;
+  color: #ad33ff;
 }
